update folder in progress

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -536,9 +536,9 @@
                       <i class="fas fa-cog"></i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="comInfoDD">
-                      <!-- <a class="dropdown-item curs-ptr" (click)="editFolder(editFolderModal, folder)"><i
+                      <a class="dropdown-item curs-ptr" (click)="editFolder(editFolderModal, folder)"><i
                           class="fas fa-edit mr-1"></i>Edit
-                        Item</a> -->
+                        Item</a>
                       <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-clone mr-1"></i>Duplicate
                         Item</a>
                       <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-link mr-1"></i>App
@@ -854,7 +854,7 @@
 </ng-template>
 
 <!-- edit folder modal  -->
-<!-- <ng-template #editFolderModal let-modal>
+<ng-template #editFolderModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Edit Folder</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
@@ -877,8 +877,7 @@
       </div>
       <div class="general" id="generalFolder" [ngbCollapse]="gnrlCollapsed">
         <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event,true)">
-          <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*"
-            formControlName="folderIcon">
+          <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*">
           <div class="text-center my-5">
             <h2><i class="fa fa-upload"></i></h2>
             <h5>Drag & Drop an icon image here</h5>
@@ -985,7 +984,7 @@
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </form>
-</ng-template> -->
+</ng-template>
 
 <!-- add smart folder modal  -->
 <ng-template #addSmartFolder let-modal>
