folder update and delete issues

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -543,7 +543,8 @@
                         Item</a>
                       <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-link mr-1"></i>App
                         Link</a>
-                      <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-trash-alt mr-1"></i>Delete
+                      <a class="dropdown-item curs-ptr" (click)="delFolder(folder.id)"><i
+                          class="fas fa-trash-alt mr-1"></i>Delete
                         Item</a>
                       <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-folder-plus mr-1"></i>Create
                         New
