--- a/src/app/web-app/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/exp/exp-inner/exp-inner.component.html
@@ -26,7 +26,7 @@
           <i class="fas fa-share-square"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="shareDD">
-          <a class="dropdown-item curs-ptr" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+          <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
           <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
         </div>
       </div>
@@ -115,7 +115,7 @@
             <i class="fas fa-share-square"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="shareDD">
-            <a class="dropdown-item curs-ptr" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+            <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
             <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
           </div>
         </div>
