--- a/src/app/web-app/share/share.component.html
+++ b/src/app/web-app/share/share.component.html
@@ -6,11 +6,12 @@
       <div class="float-right d-flex">
         <mat-slide-toggle style="font-size: 14px;" class="mt-2 mr-3">Email notifications</mat-slide-toggle>
         <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             Compose
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
-            <a class="dropdown-item curs-ptr" (click)="openLgModal(email)"><i class="fas fa-envelope mr-1"></i>Email</a>
+            <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fas fa-envelope mr-1"></i>Email</a>
             <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fas fa-link mr-1"></i>Link</a>
           </div>
         </div>
@@ -36,7 +37,8 @@
           Shared link from web app
           <div class="date">15 Oct 2020</div>
         </div>
-        <div class="border-top border-bottom dark-bg-hover py-2 px-3 mt-3 d-flex justify-content-between" (click)="openLgModal(detail)">
+        <div class="border-top border-bottom dark-bg-hover py-2 px-3 mt-3 d-flex justify-content-between"
+          (click)="openModal(detail)">
           <div class="info d-flex">
             <div class="detail mx-2"><i class="fa fa-link mr-2"></i>Someone</div>
             <div class="detail mx-2"><i class="fa fa-laptop mr-2"></i>Windows</div>
@@ -144,7 +146,8 @@
     <div class="heading">
       <div class="float-right">
         <div class="dropdown">
-          <button class="btn btn-primary btn-sm" type="button" id="cogDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-primary btn-sm" type="button" id="cogDD" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
             <i class="fa fa-cog"></i>
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cogDD">
@@ -160,7 +163,8 @@
       </div>
       <div class="d-flex">
         <div class="text-secondary align-self-center" style="width:100px;">Link</div>
-        <input type="text" value="https://hiforce.com/abc/def/ghi/jkl/mno/pqr/stu/vwx/yz" readonly style="border:0; width:260px;" #link>
+        <input type="text" value="https://hiforce.com/abc/def/ghi/jkl/mno/pqr/stu/vwx/yz" readonly
+          style="border:0; width:260px;" #link>
         <div class="btn btn-primary ml-1" (click)=copyLink(link)>Copy Link</div>
       </div>
     </div>
