--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,12 @@ body {
 // }
 
 // material
+mat-checkbox {
+  label {
+    margin-bottom: 0 !important;
+  }
+}
+
 .page-spinner {
   padding-top: 25vh;
   min-height: 50vh;
@@ -784,18 +790,18 @@ header {
   }
 
   .main {
-    .col-3 {
+    .col-4 {
       position: relative;
 
       .dropdown {
         position: absolute;
-        top: 30%;
-        left: 30%;
+        top: 2.7rem;
+        left: 3.1rem;
         opacity: 0;
       }
     }
 
-    .col-3:hover {
+    .col-4:hover {
       .dropdown {
         opacity: 1;
       }
