--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -240,12 +240,12 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <form name="anncmntForm" (ngSubmit)="onSubmit()" [formGroup]="anncmntForm" novalidate>
+  <form name="ancmntForm" (ngSubmit)="onSubmit()" [formGroup]="ancmntForm" novalidate>
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Subject</mat-label>
-        <input matInput placeholder="Subject" formControlName="subject" required/>
-        <mat-error *ngIf="anncmntForm.get('subject')!.hasError('required')">
+        <input matInput placeholder="Subject" formControlName="subject" required />
+        <mat-error *ngIf="ancmntForm.get('subject')!.hasError('required')">
           Subject is required
         </mat-error>
       </mat-form-field>
@@ -253,40 +253,86 @@
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Announcement</mat-label>
         <textarea matInput placeholder="Announcement" formControlName="body" rows="3" required></textarea>
-        <mat-error *ngIf="anncmntForm.get('body')!.hasError('required')">
+        <mat-error *ngIf="ancmntForm.get('body')!.hasError('required')">
           Announcement is required
         </mat-error>
       </mat-form-field>
       <br />
       <mat-form-field appearance="outline">
         <mat-label>Send To</mat-label>
-        <mat-select>
-          <mat-option value="0">All Users</mat-option>
-          <mat-option value="1">Selected Experiences</mat-option>
-          <mat-option value="2">Selected User Groups</mat-option>
+        <mat-select formControlName="sendToGroup" (selectionChange)="changeGrp($event)" required>
+          <mat-option *ngFor="let gT of grpType" [value]="gT.v">{{gT.n}}</mat-option>
         </mat-select>
+        <mat-error *ngIf="ancmntForm.get('sendToGroup')!.hasError('required')">
+          Send To is required
+        </mat-error>
       </mat-form-field>
       <br />
+      <mat-form-field appearance="outline" class="w-100" *ngIf="ancmntForm.controls.usrWrkSpcs && ancmntForm.value.sendToGroup==2">
+        <mat-chip-list #chipList aria-label="Select Wrodkspaces">
+            <mat-chip
+            *ngFor="let d of selWrkSpcs"
+            [selectable]="selectable"
+            [removable]="removable"
+            (removed)="remove(d, 'selWrkSpcs')">
+            {{d.name}}
+              <i matChipRemove class="fas fa-times-circle" *ngIf="removable"></i>
+            </mat-chip>
+            <input
+              matInput formControlName="usrWrkSpcs"
+              placeholder="Select user workspaces(s)"
+              [matAutocomplete]="auto"
+              ><!-- (matChipInputTokenEnd)="add($event)" -->
+        </mat-chip-list>
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selFromAutoComp($event.option.value, 'selWrkSpcs')" [displayWith]="displayFn">
+            <mat-option *ngFor="let wrkSpc of wrkSpcs" [value]="wrkSpc">
+                {{wrkSpc.name}}
+            </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="w-100" *ngIf="ancmntForm.controls.usrGrps && ancmntForm.value.sendToGroup==3">
+        <mat-chip-list #chipList1 aria-label="Select user Group(s)">
+            <mat-chip
+            *ngFor="let d of selGrps"
+            [selectable]="selectable"
+            [removable]="removable"
+            (removed)="remove(d,'selGrps')">
+            {{d.name}}
+              <i matChipRemove class="fas fa-times-circle" *ngIf="removable"></i>
+            </mat-chip>
+            <input
+              matInput formControlName="usrGrps"
+              placeholder="Select user group(s)"
+              [matAutocomplete]="auto"
+              ><!-- (matChipInputTokenEnd)="add($event)" -->
+        </mat-chip-list>
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selFromAutoComp($event.option.value,'selGrps')" [displayWith]="displayFn">
+            <mat-option *ngFor="let grp of grps" [value]="grp">
+                {{grp.name}}
+            </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
       <mat-checkbox formControlName="requestToUpdate">Request user to update content</mat-checkbox><br />
       <mat-checkbox formControlName="notifyByEmail">Notify User by Email</mat-checkbox><br />
-      <mat-checkbox id="sendLater" formControlName="sendLater">Send Later</mat-checkbox><br />
+      <mat-checkbox formControlName="sendLater" (change)="enbDisbDateTime($event)">Send Later</mat-checkbox><br />
       <div class="row justify-content-between m-0">
         <mat-form-field appearance="outline">
           <mat-label>Choose a date</mat-label>
-          <input matInput [matDatepicker]="picker" formControlName="date" required>
+          <input matInput [matDatepicker]="picker" formControlName="date">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
-          <mat-error *ngIf="anncmntForm.get('date')!.hasError('required')">
+          <mat-error *ngIf="ancmntForm.get('date')!.hasError('required')">
             Date is required
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" required>
+        <mat-form-field appearance="outline">
           <mat-label>Time</mat-label>
           <mat-select formControlName="time">
-            <mat-option value="00:00">00:00</mat-option>
-            <mat-option value="01:00">01:00</mat-option>
+            <mat-option [value]="">Select Time</mat-option>
+            <mat-option *ngFor="let t of time" [value]="t">{{t}}</mat-option>
           </mat-select>
-          <mat-error *ngIf="anncmntForm.get('time')!.hasError('required')">
+          <mat-error *ngIf="ancmntForm.get('time')!.hasError('required')">
             Time is required
           </mat-error>
         </mat-form-field>
@@ -294,7 +340,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')">Close</button>
-      <button class="btn btn-primary" [disabled]="anncmntForm!.invalid || disabled">
+      <button class="btn btn-primary" [disabled]="ancmntForm!.invalid || disabled">
         <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>Save
       </button>
     </div>
