--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -25,6 +25,53 @@
               <div class="card-body bg-white rounded-bottom px-0 pb-0">
                 <h5 class="card-title px-3">
                   <div class="heading">
+                    <div class="float-right">
+                      <div class="dropdown" (clickOutside)="outsideCloseDD(cogDropDown, $event)">
+                        <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
+                          <i class="fas fa-cog"></i>
+                        </button>
+                        <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
+                          <div class="scrollable">
+                            <span class="ml-2 heading">Visible Columns</span>
+                            <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols"
+                              class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]"
+                              (cdkDropListDropped)="drop($event)">
+                              <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
+                                <span class="ellipsis mr-2">
+                                  <i class="fa fa-ellipsis-v"></i>
+                                  <i class="fa fa-ellipsis-v"></i>
+                                </span>
+                                <i class="text-primary fas fa-eye mr-2"
+                                  (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                              </button>
+                              <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">
+                                No visbible columns
+                              </span>
+                            </ul>
+                            <span class="ml-2 heading">Hidden Columns</span>
+                            <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols"
+                              class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]"
+                              (cdkDropListDropped)="drop($event)">
+                              <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
+                                <span class="ellipsis mr-2 mb-1">
+                                  <i class="fa fa-ellipsis-v"></i>
+                                  <i class="fa fa-ellipsis-v"></i>
+                                </span>
+                                <i class="fas fa-eye-slash mr-2" (click)="showHideCols(col,'show',i)"></i>{{col.n}}
+                              </button>
+                              <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">
+                                No hidden columns
+                              </span>
+                            </ul>
+                          </div>
+                          <hr class="mb-2">
+                          <div class="float-right mr-2">
+                            <button class="btn btn-secondary btn-sm mr-2" (click)=closeDropdown($event)>Cancel</button>
+                            <button class="btn btn-primary btn-sm" (click)=saveHdrChngs($event);>Save</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div class="row mx-0 mb-3">
                       <div class="dropdown mr-2" (clickOutside)="outsideCloseDD(fileDropDown, $event)">
                         <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
@@ -130,17 +177,21 @@
                   <table class="table table-hover text-dark w-100" [class.hide-rows]="showDoc || showWork">
                     <thead>
                       <tr>
-                        <th scope="col" class="curs-ptr">Name<i class="fas fa-sort-down ml-1 align-top"></i>
+                        <th class="curs-ptr" *ngFor="let col of cols">
+                          {{col.n}}<i class="fas ml-1"
+                            [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
+                        </th>
+                        <!-- <th scope="col" class="curs-ptr">Name<i class="fas fa-sort-down ml-1 align-top"></i>
                         </th>
                         <th scope="col" class="curs-ptr">Size<i class="fas fa-sort-down ml-1 align-top"></i>
                         </th>
                         <th scope="col" class="curs-ptr">Added<i class="fas fa-sort-down ml-1 align-top"></i>
                         </th>
-                        <th scope="col" class="curs-ptr">Authors<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                        <th scope="col" class="curs-ptr">Authors<i class="fas fa-sort-down ml-1 align-top"></i></th> -->
                       </tr>
                     </thead>
                     <tbody>
-                      <tr (click)="documentToggle()">
+                      <!-- <tr (click)="documentToggle()">
                         <td>
                           Group Stock Position - Regional Offices<br />
                           <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
@@ -149,36 +200,14 @@
                         <td class="text-hi-dark-grey">790 KB</td>
                         <td>19 Aug 2020</td>
                         <td class="text-hi-dark-grey">Andrea D'Souza</td>
-                      </tr>
-                      <tr (click)="documentToggle()">
-                        <td>
-                          Group Stock Position - Regional Offices<br />
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
+                      </tr> -->
+                      <tr *ngFor="let d of data" (click)="documentToggle()">
+                        <td *ngFor="let col of cols">
+                          <span *ngIf="col.key=='name' else otherRow">
+                            {{d.name}}
+                          </span>
+                          <ng-template #otherRow>{{d[col.key]}}</ng-template>
                         </td>
-                        <td class="text-hi-dark-grey">790 KB</td>
-                        <td>19 Aug 2020</td>
-                        <td class="text-hi-dark-grey">Andrea D'Souza</td>
-                      </tr>
-                      <tr (click)="documentToggle()">
-                        <td>
-                          Group Stock Position - Regional Offices<br />
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
-                        </td>
-                        <td class="text-hi-dark-grey">790 KB</td>
-                        <td>19 Aug 2020</td>
-                        <td class="text-hi-dark-grey">Andrea D'Souza</td>
-                      </tr>
-                      <tr (click)="documentToggle()">
-                        <td>
-                          Group Stock Position - Regional Offices<br />
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                          <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
-                        </td>
-                        <td class="text-hi-dark-grey">790 KB</td>
-                        <td>19 Aug 2020</td>
-                        <td class="text-hi-dark-grey">Andrea D'Souza</td>
                       </tr>
                     </tbody>
                   </table>
@@ -549,8 +578,8 @@
             </div>
           </div>
           <div class="card-header bg-hi-light-grey py-1 px-2 row m-0">
-            <div class="dropdown dark-bg-hover rounded mr-2">
-              <button class="btn btn-sm dropdown-toggle" type="button" id="btnAddDD" data-toggle="dropdown"
+            <div class="dropdown rounded mr-2">
+              <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="btnAddDD" data-toggle="dropdown"
                 [disabled]="!selWrkspc">
                 Add
               </button>
@@ -560,8 +589,8 @@
                 <a class="dropdown-item" (click)="openModal(addSmartFolder)">Add Smart Folder</a>
               </div>
             </div>
-            <div class="dropdown dark-bg-hover rounded">
-              <button class="btn btn-sm dropdown-toggle" type="button" id="btnUsersDD" data-toggle="dropdown"
+            <div class="dropdown rounded">
+              <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="btnUsersDD" data-toggle="dropdown"
                 [disabled]="!selWrkspc">
                 Users <span class="badge badge-light">11</span>
               </button>
@@ -597,8 +626,8 @@
                 </div>
               </div>
             </div>
-            <div class="dropdown dark-bg-hover rounded ml-auto">
-              <button class="btn btn-sm dropdown-toggle" type="button" id="settingsDD" data-toggle="dropdown"
+            <div class="dropdown rounded ml-auto">
+              <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="settingsDD" data-toggle="dropdown"
                 [disabled]="!selWrkspc">
                 <i class="fas fa-cog"></i>
               </button>
